feat: get appointments with filter
